@@ -203,7 +203,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -298,7 +298,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -393,7 +393,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -488,7 +488,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -583,7 +583,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -678,7 +678,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -773,7 +773,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -868,7 +868,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -951,7 +951,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1046,7 +1046,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1141,7 +1141,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1236,7 +1236,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1331,7 +1331,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1426,7 +1426,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1521,7 +1521,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1616,7 +1616,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1711,7 +1711,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1806,7 +1806,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1889,7 +1889,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1972,7 +1972,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.<br />
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
