@@ -1,2 +1,6 @@
-1. Hotfix: captcha loop when the service is under attack.
-2. Fix: display BTC outgoing transactions.
+1. Hotfix: Addressed captcha loop during service attack
+2. Fixed: Wallet displaying zero balance
+3. Fixed: Calculated price update in ad formula when switching
+4. Added: Settlement proof button to completed trades
+5. Added: Proxy setting before login
+6. Enhanced: Wallet tiles can be minimized for compact view
